# blochK

./: .coverage  .gitignore  README.md  benchmarking.ipynb  pyproject.toml  tutorial.ipynb
.github/workflows/: python-package.yml
blochK/: MFanalysis.py  __init__.py  hamiltonian.py  hamiltonian_testing.py  mean_field.py  methods_analysis.py  methods_basic.py  methods_topological.py  observable.py  plotting.py
blochK/plotting/: __init__.py  plotting.py  publication.py  utils.py
blochK/topology/: __init__.py  methods.py  methods_topological.py  utils.py
blochK/utils/: cross_correlation.py  hamiltonian_fct.py  parameters.py
tests/: test_hamiltonian.py  test_observable.py
tests/test_plotting/: test_utils.py
tests/test_plotting.py/: test_plotting.py
tests/test_topology/: test_methods.py  test_utils.py
tests/test_utils/: test_cross_correlation.py  test_hamiltonian_fct.py  test_parameters.py
tutorials/: basics.ipynb  topology.ipynb
