[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "blochK"
version = "0.1.0"
description = "The physics of Bloch electrons is simple. This packages allows you to focus on the physics."
authors = [
  { name="Valentin Leeb", email="valentin.leeb@uzh.ch" }
]
license = { text = "MIT" }
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]